<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
         http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>zenit</groupId>
	<artifactId>zenit</artifactId>
	<version>1.0.0-SNAPSHOT</version>

	<properties>
		<javafx.version>21.0.2</javafx.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>21</maven.compiler.release>
	</properties>

	<dependencies>


		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${javafx.version}</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>${javafx.version}</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-web</artifactId>
			<version>${javafx.version}</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>3.8.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.fxmisc.richtext</groupId>
			<artifactId>richtextfx</artifactId>
			<version>0.9.3</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-exec -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-exec</artifactId>
			<version>1.3</version>
		</dependency>
		<dependency>
			<groupId>org.controlsfx</groupId>
			<artifactId>controlsfx</artifactId>
			<version>11.2.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.antlr/antlr4 -->
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr4</artifactId>
			<version>4.7.2</version>
		</dependency>
		
		<dependency>
	        <groupId>org.kordamp.ikonli</groupId>
	        <artifactId>ikonli-javafx</artifactId>
	        <version>11.3.3</version>
	    </dependency>
	    <dependency>
		    <groupId>com.kodedu.terminalfx</groupId>
		    <artifactId>terminalfx</artifactId>
		    <version>1.0.9</version>
		</dependency>
		
		<dependency>
		    <groupId>org.kordamp.ikonli</groupId>
		    <artifactId>ikonli-fontawesome-pack</artifactId>
		    <version>11.3.3</version>
		</dependency>
	</dependencies>

	<repositories>
		<repository>
		    <id>terminalfx-repo</id>
		    <url>https://github.com/javaterminal/terminalfx/raw/master/releases</url>
    	</repository>
	</repositories>

	<build>
		<plugins>
			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.8</version>

				<configuration>
					<mainClass>zenit.ui.TestUI</mainClass>
					<options>
						<option>--add-opens=javafx.graphics/javafx.scene.text=ALL-UNNAMED</option>
						<option>--add-exports=javafx.graphics/com.sun.javafx.text=ALL-UNNAMED</option>
						<option>--add-opens=javafx.graphics/com.sun.javafx.text=ALL-UNNAMED</option>
						<option>--add-exports=javafx.graphics/com.sun.javafx.scene.text=ALL-UNNAMED</option>
						<option>--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
						<option>--add-exports=javafx.graphics/com.sun.javafx.geom=ALL-UNNAMED</option>
						<option>-Dprism.allowhidpi=true</option>
					</options>
				</configuration>
			</plugin>

		</plugins>
	</build>
</project>
